--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 altair==5.3.0
+async-timeout==4.0.3
 attrs==23.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.2
@@ -25,7 +26,9 @@ pyarrow==16.1.0
 pydeck==0.9.1
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
+redis==5.0.7
 referencing==0.35.1
 regex==2024.5.15
 requests==2.32.3
@@ -34,6 +37,7 @@ rpds-py==0.18.1
 six==1.16.0
 smmap==5.0.1
 soupsieve==2.5
+spotipy==2.24.0
 streamlit==1.36.0
 tenacity==8.4.2
 toml==0.10.2
